@@ -6,6 +6,7 @@ Revision history for Dancer-Session-Cookie
  [BUG FIXES]
 
  [DOCUMENTATION]
+ - Document the 'session_expires' setting.
 
  [ENHANCEMENTS]
 
